# copyf

./: .gitignore  .pre-commit-config.yaml  README.md  copyfiles.py  copyfiles.py.legacy  implementation.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: release.yml
copy_files/: __init__.py
src/copyfiles/: __init__.py  cli.py  core.py
tests/: test_cli.py
