[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

#  Core project metadata
[project]
name = "copyfiles"
version = "0.1.0"
description = "Generate a copyfiles.txt containing project tree + file contents."
authors = [{ name = "Bethvour", email = "bethvourc@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pathspec>=0.11.0",
    "textual>=0.55.0",
    "colorama>=0.4.6",
    "rich>=13.5",
    "rich-argparse>=1.4",
    "pyfiglet>=0.8",
]

[project.scripts]
copyfiles = "copyfiles.cli:main"

[project.optional-dependencies]
dev = [
    # testing / coverage
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "coverage[toml]>=7.4",
    "tox>=4.15",
    # lint / typing / hooks
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]


#  Pytest / Coverage configuration
[tool.pytest.ini_options]
addopts   = "-ra -q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["copyfiles"]

[tool.coverage.report]
show_missing = true
skip_covered  = true


#  Static typing & linting
[tool.mypy]
python_version = "3.8"
# Start easy; turn strict on file-by-file later.
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
pretty = true
show_error_codes = true

[tool.ruff]
line-length   = 100
indent-width  = 4
target-version = "py38"
exclude       = ["tests/data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "C90"]
ignore = ["E501"]                       # line length handled above
per-file-ignores = { "tests/*.py" = ["S101", "S603"] }